--- a/static/styles/questionnaire-popup.css
+++ b/static/styles/questionnaire-popup.css
@@ -1,53 +1,39 @@
 /* The Questionnaire (background) */
 .questionnaire {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  -webkit-animation-name: fadeIn; /* Fade in the background */
-  -webkit-animation-duration: 0.4s;
-  animation-name: fadeIn;
-  animation-duration: 0.4s
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0); /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+    -webkit-animation-name: fadeIn; /* Fade in the background */
+    -webkit-animation-duration: 0.4s;
+    animation-name: fadeIn;
+    animation-duration: 0.4s
 }
 
 /* Questionnaire Content */
 .questionnaire-content {
-  position: fixed;
-  bottom: 0;
-  background-color: whitesmoke;
-  width: 100%;
-  -webkit-animation-name: slideIn;
-  -webkit-animation-duration: 0.4s;
-  animation-name: slideIn;
-  animation-duration: 0.4s
-}
-
-/* The Questionnaire Close Button */
-.questionnaire-close-btn {
-  color: white;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.questionnaire-close-btn:hover,
-.questionnaire-close-btn:focus {
-  color: lightblue;
-  text-decoration: none;
-  cursor: pointer;
+    position: fixed;
+    bottom: 0;
+    background-color: whitesmoke;
+    width: 100%;
+    -webkit-animation-name: slideIn;
+    -webkit-animation-duration: 0.4s;
+    animation-name: slideIn;
+    animation-duration: 0.4s
 }
 
 .questionnaire-header {
-  height: 64px;
-  padding: 5px 15px;
-  background-color: var(--my-dark-grey);
-  color: white;
+    height: 64px;
+    padding: 5px 15px;
+    background-color: var(--my-dark-grey);
+    color: white;
+    text-align: center;
 }
 
 .questionnaire-body {
@@ -61,25 +47,70 @@
     overflow: auto;
 }
 
+.questionnaire-footer {
+    padding: 5px 15px;
+    background-color: var(--my-dark-grey);
+}
+
+/* The Questionnaire Close Button */
+.questionnaire-close-btn {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.questionnaire-close-btn:hover,
+.questionnaire-close-btn:focus {
+    color: red;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* The Questionnaire Close Button */
+.questionnaire-submit-btn {
+    margin: 5px auto;
+}
+
 /* Add Animation */
 @-webkit-keyframes slideIn {
-  from {bottom: -300px; opacity: 0}
-  to {bottom: 0; opacity: 1}
+    from {
+        bottom: -300px;
+        opacity: 0
+    }
+    to {
+        bottom: 0;
+        opacity: 1
+    }
 }
 
 @keyframes slideIn {
-  from {bottom: -300px; opacity: 0}
-  to {bottom: 0; opacity: 1}
+    from {
+        bottom: -300px;
+        opacity: 0
+    }
+    to {
+        bottom: 0;
+        opacity: 1
+    }
 }
 
 @-webkit-keyframes fadeIn {
-  from {opacity: 0}
-  to {opacity: 1}
+    from {
+        opacity: 0
+    }
+    to {
+        opacity: 1
+    }
 }
 
 @keyframes fadeIn {
-  from {opacity: 0}
-  to {opacity: 1}
+    from {
+        opacity: 0
+    }
+    to {
+        opacity: 1
+    }
 }
 
 /* Question Label */
@@ -87,13 +118,14 @@
     font-weight: bold;
     margin: auto;
     padding: 10px;
+    text-align: center;
 }
 
 /* Utterance List */
 .questionnaire-utterance-list {
     list-style: none;
     padding: 0;
-    margin: auto;
+    margin: auto auto 10px auto;
     flex: 1;
 }
 
