--- a/static/styles/dialogue-view.css
+++ b/static/styles/dialogue-view.css
@@ -42,6 +42,11 @@
     display: block;
 }
 
+#dialogue-complete-btn {
+    height: 50px;
+    width: 85px;
+}
+
 /* Utterance View */
 .utterance-view {
     max-width: var(--max-content-width);
