--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -36,6 +36,7 @@ body {
     bottom: 0;
     display: flex;
     flex-direction: column;
+    overflow: auto;
 }
 
 .title {
@@ -82,7 +83,7 @@ button {
 
 button:hover:enabled {
     border-color: black;
-    background-color: lightblue;
+    background-color: lightskyblue;
     color: black;
 }
 
