Add Valid User List
- Set practice dialogue to be first in list
- Dialogue lists will now be random

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
         <ul>
             <li id="home" onclick="loadContent(this.id)"><p>Home</p></li>
             <li id="schema" onclick="loadContent(this.id)"><p>Schema</p></li>
-            <li id="practice" onclick="loadContent(this.id)"><p>Practice</p></li>
+{#            <li id="practice" onclick="loadContent(this.id)"><p>Practice</p></li>#}
             <li id="annotate" onclick="loadContent(this.id)"><p>Annotate</p></li>
         </ul>
     </div>
