--- a/static/styles/dialogue-view.css
+++ b/static/styles/dialogue-view.css
@@ -119,6 +119,39 @@
     background-color: var(--my-mid-grey);
 }
 
+/* Tooltip */
+.label-buttons .tooltip {
+    /*width: 120px;*/
+    background-color: var(--my-dark-grey);
+    color: white;
+    text-align: center;
+    padding: 5px 5px;
+    border-radius: 6px;
+    position: absolute;
+    z-index: 1;
+
+    opacity: 0;
+    transition-delay: 1s;
+    transition-duration: 0.5s;
+}
+
+/* Tooltip arrow */
+.label-buttons .tooltip::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: var(--my-dark-grey) transparent transparent transparent;
+}
+
+/* Tooltip transition */
+.label-buttons .tooltip.tooltip-open{
+    opacity: 0.9;
+}
+
 .btn-bar {
     width: 90%;
     max-width: var(--max-content-width);
