--- a/templates/annotate.html
+++ b/templates/annotate.html
@@ -110,7 +110,7 @@
             </div>
             <!-- Questionnaire Utterances -->
             <label class="questionnaire-label" for="questionnaire-view-utterances">
-                Please highlight any label(s) that you <u>do not</u> think adequately describe the utterance
+                Please highlight any label(s) that you think <u>do not</u> adequately describe the utterance
                 or a selection of utterances. You can select as few or as many as you like.</label>
 
             <div id="questionnaire-view-utterances" class="utterance-view"></div>
