--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,8 @@
         <img src="../static/images/nd_logo.png" alt="ND Logo" width="60" height="60">
         <ul>
             <li id="home" onclick="loadContent(this.id)"><p>Home</p></li>
+            <li id="login" onclick="loadContent(this.id)"><p>Login</p></li>
             <li id="schema" onclick="loadContent(this.id)"><p>Schema</p></li>
-{#            <li id="practice" onclick="loadContent(this.id)"><p>Practice</p></li>#}
             <li id="annotate" onclick="loadContent(this.id)"><p>Annotate</p></li>
         </ul>
     </div>
