--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
         Once a dialogue is fully labelled you will be asked to rate the different AP, DA and DA-type labels you have
         provided using a 7 point scale.
         You will also be given the opportunity to highlight any labels, or combination of labels
-        that you do not think adequately describe the dialogue.</p>
+        that you think do not adequately describe the dialogue.</p>
 
     <h3 id="annotation-instructions">Annotation Screen</h3>
     <p>Once you have logged in using your unique user-id you can access the annotation screen by clicking on the
