Update User Instructions

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,13 +6,28 @@
         that combines Dialogue Acts (DA) and Adjacency Pairs (AP) into AP-type labels for each utterance.
         A full description of the schema, labels and annotation instructions can be found on the
         <a title="Link to CA Schema" href="schema" onclick="loadContent('schema');return false;">Schema</a> tab above.
-        You can return to the schema page at any time during annotation and your progress will be saved.
         Please read the following instructions carefully before you begin.</p>
 
     <h1 id="instructions">Instructions</h1>
-    <p>You will be given a set of five unlabelled dialogues that are a mixture of task-oriented and non-task-oriented
-        conversations. For each dialogue you will be asked to label each utterance with one AP and one DA label which
+    <p>You will be given one set of five unlabelled dialogues that are a mixture of task-oriented and non-task-oriented
+        conversations.
+        The first one you see will be short practice dialogue and the rest are selected from four different corpora,
+        <a title="Link to CA-KVRET" href="https://github.com/NathanDuran/CA-KVRET">CA-KVRET</a>,
+        <a title="Link to bAbi" href="https://github.com/NathanDuran/bAbI-Tasks-Corpus">bAbI Tasks</a>,
+        <a title="Link to SCoSE" href="https://github.com/NathanDuran/SCoSE-Corpus">SCoSE</a> and
+        <a title="Link to CABNC" href="https://github.com/NathanDuran/CABNC-Corpus">CABNC</a>.
+        In total there are ~40 utterances across all dialogues in a set.
+        One dialogue in the set is longer than the rest, so dont worry if the first one you see is very long!
+        <br><br>
+        For each dialogue, you will be asked to label each utterance with one AP and one DA label which
         combine into an AP-type label.
+        There is a lot of information in the <a title="Link to CA Schema" href="schema" onclick="loadContent('schema');return false;">Schema</a>
+        and you are not expected to remember all of the label types.
+        However, please make sure you follow the short Annotation Guidelines when selecting labels.
+        The label buttons on the annotation page have tooltips with short label descriptions,
+        if you hover the mouse over them.
+        You can also return to the schema page for reference at any time during annotation and your progress will be saved.
+        <br><br>
         Once a dialogue is fully labelled you will be asked to rate the different AP, DA and DA-type labels you have
         provided using a 7 point scale.
         You will also be given the opportunity to highlight any labels, or combination of labels
@@ -22,21 +37,21 @@
     <p>Once you have logged in using your unique user-id you can access the annotation screen by clicking on the
         <a title="Link to Annotate" href="annotate" onclick="loadContent('annotate');return false;">Annotate</a> tab
         above. The first dialogue you see will be a short practice dialogue to give you an opportunity to get used to
-        the tools controls and the process of applying the labels.<br><br>
-
+        the tools controls and the process of applying the labels.
+        <br><br>
         The currently selected utterance is highlighted in <span style="color: #0366d6; font-weight: bold">blue</span>.
         You can select an utterance to label at any time just by clicking on it.
-        As you can see, the first utterance is automatically selected for you.<br><br>
-
+        As you can see, the first utterance is automatically selected for you.
+        <br><br>
         To apply labels to this utterance simply click on one of the AP buttons and one of the DA buttons from the set
         at the bottom of the screen. The labels to the right of the utterance will change to reflect your selection.
         Once you have selected one of each label type (DA and AP) the utterance will turn
-        <span style="color: green; font-weight: bold">green</span>
-        and the next unlabelled utterance will be automatically selected for you.<br><br>
-
-        If you hover over one of the label buttons a popup will appear an alternative name for that label and/or a short
-        description and an example.<br><br>
-
+        <span style="color: green; font-weight: bold">green</span>, indicating that it is now labelled with an AP-type and the next unlabelled
+        utterance will be automatically selected for you.
+        <br><br>
+        If you hover over one of the label buttons a tooltip will appear with an alternative name for that label
+        and/or a short description and an example.
+        <br><br>
         You can remove the labels for any utterance by clicking on the
         <img alt="clear button" src="../static/images/delete_square.png" width="25" height="25"> button next to the
         labels.
@@ -73,9 +88,16 @@
     <p>If you are ready to start, please
         <a title="Link to Login" href="login" onclick="loadContent('login');return false;">Log in</a>
         using the user-id that has been provided to you.
-        You will be taken directly to the annotation page.
-        Remember, you can return to the Home or Schema page at any time and your progress will be saved.<br><br>
-
+        You will be taken directly to the
+        <a title="Link to Annotate" href="annotate" onclick="loadContent('annotate');return false;">annotation</a> page.
+        <br><br>
+        Remember, you can return to the Home or
+        <a title="Link to CA Schema" href="schema" onclick="loadContent('schema');return false;">Schema</a>
+        page at any time and your progress will be saved.
+        Please follow the Annotation Guidelines when selecting labels and refer to the
+        <a title="Link to CA Schema" href="schema" onclick="loadContent('schema');return false;">Schema</a>
+        if you are unsure.
+        <br><br>
         Please log out when you are finished and thank you for taking part!
     </p>
 
