--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,8 @@
         that combines Dialogue Acts (DA) and Adjacency Pairs (AP) into AP-type labels for each utterance.
         A full description of the schema, labels and annotation instructions can be found on the
         <a title="Link to CA Schema" href="schema" onclick="loadContent('schema');return false;">Schema</a> tab above.
+        You can also find it <a title="External link to CA Schema" href="https://nathanduran.github.io/CA-Schema/" >here</a>
+        if you would like to open it in another tab.
         Please read the following instructions carefully before you begin.</p>
 
     <h1 id="instructions">Instructions</h1>
