--- a/templates/home.html
+++ b/templates/home.html
@@ -6,12 +6,12 @@
         that combines Dialogue Acts (DA) and Adjacency Pairs (AP) into AP-type labels for each utterance.
         A full description of the schema, labels and annotation instructions can be found on the
         <a title="Link to CA Schema" href="schema" onclick="loadContent('schema');return false;">Schema</a> tab above.
-        You can also find it <a title="External link to CA Schema" href="https://nathanduran.github.io/CA-Schema/" >here</a>
-        if you would like to open it in another tab.
+        You can also find it <a title="External link to CA Schema" href="https://nathanduran.github.io/CA-Schema/" target="_blank">here</a>
+        if you would like to open it in another tab/window.
         Please read the following instructions carefully before you begin.</p>
 
     <h1 id="instructions">Instructions</h1>
-    <p>You will be given one set of five unlabelled dialogues that are a mixture of task-oriented and non-task-oriented
+    <p>You will be given a set of <b>five unlabelled dialogues</b> that are a mixture of task-oriented and non-task-oriented
         conversations.
         The first one you see will be short practice dialogue and the rest are selected from four different corpora,
         <a title="Link to CA-KVRET" href="https://github.com/NathanDuran/CA-KVRET">CA-KVRET</a>,
