--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,7 @@
 </div>
 
 <!-- Content -->
-<div id="main-content-container" class="content-container"></div>
+<button id="to-top-btn" onclick="toTopBtnClick()" title="Go to top">Back To Top</button>
+<div id="main-content-container" class="content-container" onscroll="scrollView()"></div>
 </body>
 </html>
